Fix spacing around cookie changes confirmation
- adds margin bottom to the success alert component to provide spacing between it and the page H1 when user has changed cookie settings
- remove unnecessary CSS

--- a/app/assets/stylesheets/views/_cookie-settings.scss
+++ b/app/assets/stylesheets/views/_cookie-settings.scss
@@ -16,8 +16,6 @@
 
 .cookie-settings__confirmation {
   display: none;
-  margin-top: govuk-spacing(3);
-  @include govuk-font(19);
 }
 
 .cookie-settings__gov-services {
